:iphone: fix: top descount bar text without align
In some devices, the top descount bar text was unaligned

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -67,6 +67,10 @@ header div.desktop {
     display: none;
 }
 
+header > div:first-child p {
+    text-align: center;
+}
+
 header div.top-bar-input {
     position: relative;
     display: flex;
